--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">BookmarkReader</string>
     <string name="login_screen_title">Please Login</string>
+    <string name="add_new">Add new</string>
+    <string name="enter_url">Enter url</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
+    <string name="not_evaluated">Not evaluated yet</string>
+    <string name="already_added">Already added</string>
 </resources>
