Feature log view implemented
commit 20a1247d8e3510b5fce000ae80db6a6bb3c6e824
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Thu Sep 21 00:07:13 2017 +0300

    LogView completed

commit 533b26c7ec818e106ee5d63f24fa371c846b3a4d
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Wed Sep 20 00:08:01 2017 +0300

    LogView draft:2 now logs are displayed

commit 2038db7de6e9bd415b27698371971bead7550ba6
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Mon Sep 18 22:22:40 2017 +0300

    History view fragment skeleton prepared

commit c81cc65b874a4dac3084f01756f65fb2d980bd39
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Sep 17 22:17:54 2017 +0300

    sidemenu navigation items has beend add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="already_added">Already added</string>
     <string name="article_load_error">Cannot load article</string>
     <string name="connection_error">Connection error</string>
+    <string name="history">History</string>
+    <string name="recent_activity">Recent activity</string>
+    <string name="home">Home</string>
+    <string name="none">none</string>
 </resources>
