--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="recent_activity">Recent activity</string>
     <string name="home">Home</string>
     <string name="none">none</string>
+    <string name="refresh_sites">Download all</string>
 </resources>
