Feature Merge: Summary Extraction
-diff-util library added as dependency
-Now when html content changed its displayed on weblistview page
-Some changes done on model objects

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="home">Home</string>
     <string name="none">none</string>
     <string name="refresh_sites">Download all</string>
+    <string name="unexpected_error">Something went terribly wrong</string>
+    <string name="error">Error</string>
 </resources>
