Edit list fragment
-new view to delete items
-additional enhancements on menu , views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="successfull">Unchanged</string>
     <string name="downloading">Downloading</string>
     <string name="download_stopped">Download Stopped</string>
+    <string name="nothing_to_read">Nothing to read</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="edit_items">Edit Items</string>
+    <string name="delete">Delete</string>
 </resources>
