Toolbar title changes based on Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="edit_items">Edit Items</string>
     <string name="delete">Delete</string>
+    <string name="logs">Logs</string>
+    <string name="download">Download</string>
+    <string name="edit">Edit</string>
 </resources>
