--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="logs">Logs</string>
     <string name="download">Download</string>
     <string name="edit">Edit</string>
+    <string name="unread">Unread</string>
+    <string name="read">Read</string>
+    <string name="all">All</string>
 </resources>
