--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="all">All</string>
     <string name="switch_article">Switch Article</string>
     <string name="url_added">Url added</string>
+    <string name="no_download_available">Content not downloaded yet</string>
 </resources>
